--- a/app/src/main/res/layout/add_viaje_fragment.xml
+++ b/app/src/main/res/layout/add_viaje_fragment.xml
@@ -174,6 +174,14 @@ android:layout_height="match_parent">
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:text="Guardar"/>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_editar"
+                android:layout_weight="1"
+                style="@style/Widget.MaterialComponents.Button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:text="Editar"/>
 
         </LinearLayout>
 
