--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
-    tools:context=".ui.card.PaymetCardFragment">
+    tools:context=".Fragment.Card.PaymetCardFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
