--- a/app/src/main/res/layout/cliente_detalle_fragment.xml
+++ b/app/src/main/res/layout/cliente_detalle_fragment.xml
@@ -31,7 +31,7 @@
 
       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
-          android:layout_height="230dp"
+          android:layout_height="250dp"
           android:layout_margin="15dp"
           app:cardCornerRadius="30dp">
 
@@ -90,6 +90,32 @@
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:orientation="vertical">
+                      <LinearLayout
+                          android:id="@+id/btn_expediente"
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:layout_weight="1"
+                          android:orientation="horizontal">
+                          <ImageView
+                              android:layout_margin="4dp"
+                              android:layout_width="match_parent"
+                              android:layout_height="match_parent"
+                              android:layout_weight="5"
+                              android:src="@drawable/ic_expediente"/>
+                          <TextView
+                              android:id="@+id/text_expediente"
+                              android:textColor="@color/black"
+                              android:gravity="left|center"
+                              android:layout_weight="1"
+                              android:layout_width="match_parent"
+                              android:layout_height="match_parent"
+                              app:autoSizeTextType="uniform"
+                              app:autoSizeMinTextSize="10sp"
+                              app:autoSizeMaxTextSize="15sp"
+                              android:lines="1"
+                              android:fontFamily="@font/varela"
+                              android:textStyle="bold"/>
+                      </LinearLayout>
                       <LinearLayout
                           android:id="@+id/btn_telefono"
                           android:layout_width="match_parent"
