--- a/app/src/main/res/layout/cliente_list_fragment.xml
+++ b/app/src/main/res/layout/cliente_list_fragment.xml
@@ -47,9 +47,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:layout_margin="5dp"
                     android:gravity="bottom|center"
                     android:maxLines="1"
+                    android:textColor="@color/black"
                     android:text="Luis Alfonso Niño Mtz"
                     android:textStyle="bold"
                     app:autoSizeMaxTextSize="18sp"
@@ -60,7 +60,43 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:layout_margin="10dp"
+                    android:orientation="horizontal">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:layout_margin="5dp"
+                        android:gravity="bottom|center"
+                        android:maxLines="1"
+                        android:textColor="@color/black"
+                        android:text="Expediente: "
+                        android:textStyle="bold"
+                        app:autoSizeMaxTextSize="18sp"
+                        app:autoSizeMinTextSize="10sp"
+                        app:autoSizeTextType="uniform" />
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/textExpediente"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:layout_margin="5dp"
+                        android:gravity="bottom|center"
+                        android:maxLines="1"
+                        android:textColor="@color/red_A700"
+                        android:textStyle="bold"
+                        app:autoSizeMaxTextSize="18sp"
+                        app:autoSizeMinTextSize="10sp"
+                        app:autoSizeTextType="uniform" />
+                </LinearLayout>
+
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.9"
+                    android:layout_margin="8dp"
                     android:orientation="vertical">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -71,21 +107,18 @@
                             android:id="@+id/fondoTelefono"
                             android:src="@drawable/ic_telefono"
                             android:layout_weight="1"
-                            android:layout_margin="3dp"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent" />
                         <ImageView
                             android:id="@+id/fondoCorreo"
                             android:src="@drawable/ic_correo"
                             android:layout_weight="1"
-                            android:layout_margin="3dp"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent" />
                         <ImageView
                             android:id="@+id/fondoUbicacion"
                             android:src="@drawable/ic_location"
                             android:layout_weight="1"
-                            android:layout_margin="3dp"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent" />
                     </LinearLayout>
