--- a/app/src/main/res/layout/vista_agregar_mascota.xml
+++ b/app/src/main/res/layout/vista_agregar_mascota.xml
@@ -161,6 +161,23 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:background="@color/white"
+                        app:startIconDrawable="@drawable/ic_pet">
+
+                        <AutoCompleteTextView
+                            android:id="@+id/sp_esterilizado"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="hola"
+                            android:hint="@string/txtField_raza" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
