--- a/app/src/main/res/layout/campania_evento_fragment.xml
+++ b/app/src/main/res/layout/campania_evento_fragment.xml
@@ -52,6 +52,12 @@
             android:layout_height="wrap_content"
             android:gravity="right">
             <Button
+                android:id="@+id/btn_PDF"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="PDF"
+                android:layout_margin="10dp"/>
+            <Button
                 android:id="@+id/btn_add_paciente_campaña"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -65,6 +71,7 @@
                 android:text="Campaña"
                 android:drawableLeft="@drawable/ic_mas_blanco"
                 android:layout_margin="10dp"/>
+
         </LinearLayout>
     </LinearLayout>
 
